--- a/public/styles.css
+++ b/public/styles.css
@@ -244,15 +244,20 @@ body {
     font-size: 3.5rem;
     margin-bottom: 1rem;
     min-height: 70px;
+    height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .card-imagem img {
-    max-width: 100%;
-    max-height: 70px;
-    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 10px;
 }
 
 .card-produto h3 {
